BUILT_APPS = testbeddemo.elf radiodemo.elf testbedsense.elf testbeddiscover.elf multihop_base.elf multihop_relay.elf multihop_sense.elf testbedload.elf testbedbig.elf testbed_send.elf testbed_recv.elf rapid_sense.elf tone.elf
testbed_send_elf_SOURCES =  testbed_send.c
testbed_recv_elf_SOURCES =  testbed_recv.c 
testbedbig_elf_SOURCES = testbed-big-sense.c
testbeddemo_elf_SOURCES = testbed-demo.c
radiodemo_elf_SOURCES = radio-demo.c
testbedsense_elf_SOURCES = testbed-sense.c
testbeddiscover_elf_SOURCES = testbed-discover.c
testbedload_elf_SOURCES = testbed-load.c
rapid_sense_elf_SOURCES = rapid_sense.c
tone_elf_SOURCES = tone.c

multihop_relay_elf_SOURCES = testbed-multihop-relay.c
multihop_sense_elf_SOURCES = testbed-multihop-sense.c
multihop_base_elf_SOURCES  = testbed-multihop-base.c

include ../../Makefile.am.inc
