noinst_LIBRARIES = lib_kernel.a
lib_kernel_a_SOURCES = adc.c args.c msched.c uart.c event.c mem.c sem.c node_id.c clock.c 

AM_CPPFLAGS = \
  -I$(top_srcdir)/src/mos/sys/include \
  -I$(top_srcdir)/src/mos/kernel/linux/include \
  -I$(top_srcdir)/src/mos/kernel/include \
  -I$(top_srcdir)/src/mos/sys/include \
  -I$(top_srcdir)/src/lib/include
