
noinst_LIBRARIES = lib_kernel.a
lib_kernel_a_SOURCES = plat_dep.c user_button.c

#Gonna need a platform here
AM_CPPFLAGS = \
  -I$(top_srcdir)/src/mos/sys/include \
  -I$(top_srcdir)/src/mos/share/include \
  -I$(top_srcdir)/src/tools/shell \
  -I$(top_srcdir)/src/mos/share/include \
  -I$(top_srcdir)/src/mos/kernel/include \
  -I$(top_srcdir)/src/mos/kernel/msp430/include \
  -I$(top_srcdir)/src/mos/kernel/micro/include \
  -I$(top_srcdir)/src/lib/include \
  -I$(top_srcdir)/src/mos/com/include \
  -I$(top_srcdir)/src/mos/dev/include
